chore: fix native builds and misc changes